--- a/src/app/create-pokemon/create-pokemon.component.css
+++ b/src/app/create-pokemon/create-pokemon.component.css
@@ -8,7 +8,8 @@
 .form {
     display: grid;
     grid-template-columns: repeat(2, 230px);
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(8, auto);
+    gap: 10px;
 }
 
 .form__group {
@@ -21,6 +22,7 @@
     display: grid;
     grid-template-columns: repeat(2, 230px);
     grid-template-rows: repeat(3, auto);
+    grid-column-gap: 10px
 }
 
 .form__group-bmi__msg {
@@ -43,10 +45,6 @@
     font-size: 15px;
     color: #253262;
     margin-bottom: 5px;
-}
-
-.form__img {
-    grid-row: span 2;
 }
 
 button {
