update routing to add login screen

--- a/src/app/view-pokemon/view-pokemon.component.html
+++ b/src/app/view-pokemon/view-pokemon.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<div class="container">
     <app-header-details></app-header-details>
     <app-information-cards></app-information-cards>
 </div>
