add signup method in the service and toaster to display errors

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <form [formGroup]="authForm" class="form">
+    <form [formGroup]="authForm" class="form" (ngSubmit)="onSubmit()">
         <span class="title">{{ isLoginMode ? 'Log In Now' : 'Sign Up Now'}}</span>
         <div class="form__group">
-            <label for="email" class="form__label">E-mail</label>
+            <label for="email" class="form__label">Email</label>
             <input type="email" id="email" formControlName="email" class="form__input">
             <app-print-validation-error [control]="authForm.get('email')"></app-print-validation-error>
         </div>
@@ -11,10 +11,10 @@
             <input type="password" id="password" formControlName="password" class="form__input">
             <app-print-validation-error [control]="authForm.get('password')"></app-print-validation-error>
         </div>
-        <button>{{ isLoginMode ? 'Log In' : 'Sign Up' }}</button>
+        <button type="submit" [disabled]="!authForm.valid">{{ isLoginMode ? 'Log In' : 'Sign Up' }}</button>
         <div>
             <span class="signup-text">{{ isLoginMode ? "Don't have an account?" : 'Already have an account?'}}</span>
-            <button class="signup-button" (click)="onSwitchMode()">{{ isLoginMode ? 'Sign Up' : 'Log In' }}</button>
+            <button class="signup-button" (click)="onSwitchMode()" type="button">{{ isLoginMode ? 'Sign Up' : 'Log In' }}</button>
         </div>
     </form>
 </div>
