--- a/src/app/pokemon/pokemon.component.css
+++ b/src/app/pokemon/pokemon.component.css
@@ -6,14 +6,20 @@
     overflow: hidden;
 }
 
+.header-container {
+    flex-grow: 2;
+    background-color: #efefef;
+}
+
 .header {
     height: 100px;
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     padding-left: 30px;
+    padding-right: 30px;
     background-color: #efefef;
 }
 
@@ -36,9 +42,23 @@
     transform: rotate(180deg);
 }
 
-.header-container {
-    flex-grow: 2;
-    background-color: #efefef;
+.logout-button {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    background-color: #277dff;
+    box-shadow: 2px 2px 5px -2px rgba(0, 0, 0, .1);
+    cursor: pointer;
+}
+
+.logout-button-icon {
+    margin-right: 4px;
 }
 
 .router-container {
